	  Book.  Contributed by Max Holtzberg (2013-5-22).
	* apps/examples/slcd:  Add an example for testing alphanumeric,
	  segment LCDs (2013-5-24).
	* apps/examples/slcd:  Extend SLCD test to handle multi-line displays
	  (2013-5-26).
	* apps/examples/slcd:  This test now sets the SLCD brightness level to
	  the mid-point as part of its initialization (2013-5-27).
	* .gitignore:  Clean-up of most all .gitignore files:  Make scope of
	  ignore to be only the current directory; Ignore .dSYM files in
	  directories where .exe's may be build.  Also, in Makefiles,
	  clean .dSYM files in directories where .exe may be built (2013-5-30).
	* apps/examples/nrf35l01_term: Add an example application to demo the
	  nRF24L01 driver.  From Laurent Latil (2013-6-1).
	* apps/nshlib/Kconfig:  Add some missing NSH configuration values.
	  From Lorenz Meier (2013-6-2).
	* Standardize on CONFIG_NSH_BUILTIN_APPS.  Remove all other variants
	  of the build-as-an-NSH-application configuration settings
	  (2013-6-12).

6.29 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/examples/nsh, cxxtest, and helloxx:  C++ initializers should be
	  set once and, preferably, in the context of the task that uses any C++
	  statically initialized classes.  These only becomes an issue is cxxtest
	  or helloxx are built as NSH builtin applications.  Then you want the
	  initialization done in cxxtext or helloxx and not in NSH (and certainly
	  not twice).  Added configuration options to control who does the C++
	  initialization.  NSH now does not do C++ initialization be default and
	  must be configured to do otherwise.  Converserly, cxxtest and helloxx
	  will do C++ initialization unless configured do otherwise (2013-6-21).
	* apps/examples/cxxtext:  Add ostream test as provided by Michael
	  (2013-6-21).
	* apps/examples/nxhello:  Minor fix for compilation error when the
	  display resolution is low (< 8bpp) due to a typo that has been there
	  for a long time (2013-6-23).