@@ -73,6 +73,8 @@
 #    define CONFIG_EXAMPLES_NXHELLO_BGCOLOR 0x007b68ee
 #  elif CONFIG_EXAMPLES_NXHELLO_BPP == 16
 #    define CONFIG_EXAMPLES_NXHELLO_BGCOLOR 0x7b5d
+#  elif CONFIG_EXAMPLES_NXHELLO_BPP < 8
+#    define CONFIG_EXAMPLES_NXHELLO_BGCOLOR 0x00
 #  else
 #    define CONFIG_EXAMPLES_NXHELLO_BGCOLOR ' '
 # endif
@@ -87,6 +89,8 @@
 #    define CONFIG_EXAMPLES_NXHELLO_FONTCOLOR 0x00000000
 #  elif CONFIG_EXAMPLES_NXHELLO_BPP == 16
 #    define CONFIG_EXAMPLES_NXHELLO_FONTCOLOR 0x0000
+#  elif CONFIG_EXAMPLES_NXHELLO_BPP < 1
+#    define CONFIG_EXAMPLES_NXHELLO_FONTCOLOR 0x01
 #  else
 #    define CONFIG_EXAMPLES_NXHELLO_FONTCOLOR 'F'
 #  endif
